# bip39-rs

./: Cargo.toml  rustfmt.toml
src/: crypto.rs  language.rs  mnemonic.rs  mnemonic_type.rs  seed.rs
tests/: standard-vectors.rs
