[package]

name = "bip39"
version = "0.6.0-beta.1"
authors = [ "Stephen Oliver <steve@infincia.com>" ]
license = "MIT/Apache-2.0"
homepage = "https://github.com/infincia/bip39-rs/"
repository = "https://github.com/infincia/bip39-rs/"
readme = "README.md"
description = "A Rust implementation of BIP-0039"
documentation = "https://docs.rs/bip39"
keywords = ["bip39", "bitcoin", "mnemonic"]
edition = "2018"

[lib]
name = "bip39"
path = "src/lib.rs"

[features]
# Note: English is the standard for bip39 so always included
chinese-simplified = ["unicode-normalization"]
chinese-traditional = ["unicode-normalization"]
french = ["unicode-normalization"]
italian = ["unicode-normalization"]
japanese = ["unicode-normalization"]
korean = ["unicode-normalization"]
spanish = ["unicode-normalization"]

default = ["chinese-simplified", "chinese-traditional", "french", "italian", "japanese", "korean", "spanish"]

[dependencies]
failure = "0.1.3"
# Note: hashbrown is going to be merged into Rust std
hashbrown = "0.1.7"
sha2 = "0.8.0"
hmac = "0.7.0"
pbkdf2 = { version = "0.3.0", features=["parallel"], default-features = false }
rand = "0.6.5"
once_cell = { version = "0.1.8", features = [ "parking_lot" ] }

# Optional dependencies
unicode-normalization = {version = "0.1.8", optional=true}

[dev-dependencies]
hex = "0.3.2"
paste = "0.1.4"